<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="buttonPicasso">Picasso</string>
    <string name="buttonFlagsAnimation">Flags_Animation</string>
    <string name="vegetables">Vegetables</string>
    <string name="buttonLoad">Load Image</string>
    <string name="hint">Please enter image url</string>
    <string name="buttonFlags">Flags</string>
    <string name="buttonAnimation">Animation</string>
    <string name="flagArmenia">Armenia</string>
    <string name="flagAustria">Austria</string>
    <string name="flagBelgium">Belgium</string>
    <string name="flagLatvia">Latvia</string>
    <string name="flagDenmark">Denmark</string>
    <string name="flagSpain">Spain</string>
    <string name="nameMinsk">Minsk</string>
    <string name="potato">Potato</string>
    <string name="cabbage">Cabbage</string>
    <string name="beet">Beet</string>
    <string name="nameGomel">Gomel</string>
    <string name="nameBrest">Brest</string>
    <string name="buttonCoffee">Coffee</string>
    <string name="btnCollections">Коллекция</string>
    <string name="btnAddCoffee">Добавить кофе</string>
    <string name="btnAdd">Добавить</string>
    <string name="buttonVerification">Verification</string>
    <string name="buttonRegister">Register</string>
    <string name="textFieldName">Name</string>
    <string name="textFieldPassword">Password</string>
    <string name="buttonOk">OK</string>
    <string name="supporting_text">Registration was successful</string>
    <string name="buttonSignIn">SignIn</string>
    <string name="buttonMothersDay">MothersDay</string>
    <string name="congratulation">"
Желаю
   светлых, ясных дней,
       Здоровья и удачи!
          Ты береги себя и знай,
              Что очень много значишь!"</string>
    <string name="buttondatabase">DataBase</string>
    <string name="add">Add</string>
    <string name="network">Network</string>
    <string name="get_rates">Get rates</string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="backendless">Backendless</string>
    <string name="title_activity_backendless">BackendlessActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clients">Clients</string>
    <string name="input">text</string>
    <string name="last_name_input">last name</string>
    <string name="input_deposit">Deposit</string>
    <string name="add_client">Add client</string>
    <string name="luxmeter">luxmeter</string>
    <string name="tests">tests</string>
    <string name="enter_number">Введите число</string>
    <string name="covid19">Covid19</string>
    <string name="update">Update</string>
    <string name="appwidget_text">City</string>
    <string name="configure">City</string>
    <string name="add_widget">Add widget</string>
    <string name="clouds">Clouds</string>
    <string name="change_city">Change city</string>

</resources>