<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeWorkBackendless.SecondFragment">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_first_name"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_double"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        app:placeholderText="@string/input"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_last_name"
        android:layout_margin="@dimen/margin_double"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_first_name"
        android:layout_height="wrap_content"
        app:placeholderText="@string/last_name_input"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_double"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_last_name"
        android:layout_height="wrap_content"
        app:placeholderText="@string/input_deposit"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_deposit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/butoon_add_client"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_double"
        android:text="@string/add_client"/>
</androidx.constraintlayout.widget.ConstraintLayout>